rook-ceph/toolbox.yaml
# https://github.com/rook/rook/releases
# https://github.com/rook/rook/blob/master/deploy/examples/toolbox.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rook-ceph-tools
  namespace: rook-ceph
  labels:
    app: rook-ceph-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rook-ceph-tools
  template:
    metadata:
      labels:
        app: rook-ceph-tools
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: rook-ceph-tools
        image: rook/ceph:v1.19.2
        command: ["/bin/bash"]
        args: ["-m", "-c", "/usr/local/bin/toolbox.sh"]
        imagePullPolicy: IfNotPresent
        tty: true
        securityContext:
          runAsNonRoot: true
          runAsUser: 2016
          runAsGroup: 2016
        volumeMounts:
        - mountPath: /etc/ceph
          name: ceph-config
        - name: mon-endpoint-volume
          mountPath: /etc/rook
      volumes:
      - name: mon-endpoint-volume
        configMap:
          name: rook-ceph-mon-endpoints
          items:
          - key: data
            path: mon-endpoints
      - name: ceph-config
        emptyDir: {}
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 5
