rook-ceph/30-ing-dash.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
spec:
  rules:
  - host: ceph.home.seanho.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: http-dashboard
  tls:
  - hosts:
    - ceph.home.seanho.com
    secretName: rook-ceph-mgr-dashboard-tls
